# lutin

./: .gitignore  Automate.h  Expression.h  README.md  State.h  automate.h  build.sh  constantnum.h  dec.lut  decl.lut  demo_interpretation.lut  demo_optimization.lut  demo_recovery.lut  demo_static_analysis.lut  etat.h  expradd.h  exprbinary.h  exprdiv.h  expression.h  exprmult.h  exprpar.h  exprsub.h  intro.ml  lexer.cpp  lexer.h  prog.lut  state.h  symbol.h  variable.h
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  constantnum.h  exprbinary.h  exprdiv.h  exprpar.h  exprsub.h  instructionlist.h  lexer.cpp  lexer.h  main.cpp  program.cpp  program.h  state.h  statemachine.cpp  statemachine.h  symbol.cpp  symbol.h  symboltype.h
src/declaration/: constdec.cpp  constdec.h  constdeclist.cpp  constdeclist.h  declaration.h  declarationlist.cpp  declarationlist.h  vardec.cpp  vardec.h  vardeclist.cpp  vardeclist.h
src/instruction/: assign.cpp  assign.h  binaryexp.cpp  binaryexp.h  expadd.cpp  expadd.h  expdiv.cpp  expdiv.h  expmult.cpp  expmult.h  exppar.cpp  exppar.h  expradd.h  expression.h  exprmult.h  expsub.cpp  expsub.h  instruction.h  instructionlist.cpp  instructionlist.h  numericconst.cpp  numericconst.h  read.cpp  read.h  variable.cpp  variable.h  write.cpp  write.h
src/interpretation/: symboltable.cpp
src/interpreter/: interpreter.cpp  interpreter.h  symboltable.cpp  symboltable.h
src/optimization/: optimizer.cpp  optimizer.h
src/parsing/: lexer.cpp  lexer.h  statemachine.cpp  statemachine.h
src/parsing/ast/: program.cpp  program.h  symbol.cpp  symbol.h  symboltype.h  unknown.h
src/parsing/ast/declaration/: constdec.cpp  constdec.h  constdeclist.cpp  constdeclist.h  declaration.h  declarationlist.cpp  declarationlist.h  simpledec.h  vardec.cpp  vardec.h  vardeclist.h
src/parsing/ast/expression/: binaryexp.cpp  binaryexp.h  expadd.cpp  expadd.h  expdiv.cpp  expdiv.h  expmult.cpp  expmult.h  exppar.cpp  exppar.h  expression.h  expsub.cpp  expsub.h  identifier.cpp  identifier.h  numericconst.cpp  numericconst.h
src/parsing/ast/instruction/: assign.cpp  assign.h  binaryexp.cpp  binaryexp.h  expadd.cpp  expadd.h  expdiv.cpp  expdiv.h  expmult.cpp  expmult.h  exppar.cpp  exppar.h  expression.h  expsub.cpp  expsub.h  identifier.cpp  identifier.h  instruction.h  instructionlist.cpp  instructionlist.h  numericconst.cpp  numericconst.h  read.cpp  read.h  variable.cpp  variable.h  write.cpp  write.h
src/parsing/states/: e0.cpp  e0.h  e1.cpp  e1.h  e10.cpp  e10.h  e11.cpp  e11.h  e12.cpp  e12.h  e13.cpp  e13.h  e14.cpp  e14.h  e15.cpp  e15.h  e16.cpp  e16.h  e17.cpp  e17.h  e18.cpp  e18.h  e19.cpp  e19.h  e2.cpp  e2.h  e20.cpp  e20.h  e21.cpp  e21.h  e22.cpp  e22.h  e23.cpp  e23.h  e24.cpp  e24.h  e25.cpp  e25.h  e26.cpp  e26.h  (+44 more)
src/states/: #e4.cpp#  #e5.cpp#  .#e5.cpp  e0.cpp  e0.h  e1.cpp  e1.h  e10.cpp  e10.h  e11.cpp  e11.h  e12.cpp  e12.h  e13.cpp  e13.h  e14.cpp  e14.h  e15.cpp  e15.h  e16.cpp  e16.h  e17.cpp  e17.h  e18.cpp  e18.h  e19.cpp  e19.h  e2.cpp  e2.h  e20.cpp  e20.h  e21.cpp  e21.h  e22.cpp  e22.h  e23.cpp  e23.h  e24.cpp  e24.h  e25.cpp  (+47 more)
src/static_analysis/: staticanalyzer.cpp  staticanalyzer.h
states/: e1.c  e1.h
test/: mktest.sh
test/01.NoArgument/: run
test/02.FichierInexistant/: run
test/03.FichierExistant/: run
test/04.Affichage/: run
test/05.DoubleDeclaration/: run
test/06.1.AnalyseStatique/: run
test/06.2.AnalyseStatique/: run
test/06.3.AnalyseStatique/: run
test/06.4.AnalyseStatique/: run
test/07.Execution/: run
test/08.1.Optimisation/: run
test/08.2.Optimisation/: run
test/09.ErreurLexicale/: run  stderr.out
test/10.ErreurSyntaxique/: run  stderr.out
test/11.FichierVide/: description  run
test/12.DivisionZero/: description  run  stderr.out
test/13.AffectationCst/: description  run  stderr.out
test/14.ErreurLexicale/: run  stderr.out
test/15.ErreurLexicale/: description  run  stderr.out
test/16.Execution/: description  run  std.out
test/17.Optimisation/: description  run  std.out
test/18.AffectationCstExe/: description  run  stderr.out
test/19.ErreurSytaxique/: description  run  stderr.out
test/20.LongCode/: description  run  std.out
test/21.Parenthesage/: description  run
test/22.ArgumentInvalide/: description  run  stderr.out
test/files/: affconst.lt  complex.lt  correct16.lt  correct16.lut  divzero.lt  lexerror14.lt  lexerror15.lt  negatifs.lt  optimisation17.lt  parentheses.lt  synerror.lt  synerror19.lt
